# braille

./: .gitignore  CMakeLists.txt  main.cpp  param.cfg
component/: CMakeLists.txt  Time.cpp  braille_screen.cpp  braille_square.cpp  id_generator.cpp  id_generator_mgr.cpp  orm_proxy.cpp  point_panel.cpp  py_stript_interface.cpp  sqlite_db.cpp  sqllite_db.cpp
phone/: CMakeLists.txt  book_mark.cpp  book_mark.h  dial_button.cpp  dialback_button.cpp  number_button.cpp
phone/button/: dial_button.h  dialback_button.h  handup_button.cpp  handup_button.h  number_button.h  redial_button.cpp  redial_button.h
reader/: CMakeLists.txt  book.cpp  book.h  book_mark.cpp  book_mark.h  page_turning.cpp  page_turning.h  reader_buffer.h
reader/button/: page_turning_button.cpp  page_turning_button.h
script/: braille_translator.py
script/python/: braille_translator.py
script/sql/: braille.sql
utility/component/: braille_screen.h  braille_screen_ctrl.h  braille_square.h  id_generator.h  id_generator_mgr.h  orm_db_callback.h  orm_proxy.h  point_panel.h  py_stript_interface.h  sqlite_db.h  sqllite_db.h
utility/include/: AnyType.h  Pos.h  Singleton.h  Time.h  TypeDefine.h  UnCopyable.h  stringutil.h
